added some main content

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -97,20 +97,61 @@
     top: 0px;
 
 }
-#socials {
+
+#socialsContainer {
+    background-color: blue;
+    width: 60vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#socialsIcons {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: flex-end;
     align-items: center;
 }
 
-.social {
-    padding: 0 15px;
+.socialIcon {
+    padding: 0px 10px;
 }
+
 #icon {
     width: 15px;
     height: 15px;
     cursor: pointer;
+}
+
+/* styling for spacer*/
+.spacer {
+    width: 825px;
+    height: 1px;
+    background-color: grey;
+    margin: 20px 0px;
+}
+
+/* video description */
+
+#channelImage {
+    height: 48px;
+    width: 48px;
+}
+
+#channelNameContainer h2 {
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.6rem;
+    font-family: Roboto, Arial, sans-serif;
+}
+
+#channelNameContainer p {
+    color: rgba(17, 17, 17, 0.6);
+    font-size: 0.9rem;
+    font-weight: 400;
+    line-height: 1.8rem;
+    text-transform: none;
+    font-family: Roboto, Arial, sans-serif;
 }
 
 
