--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 * {
     padding: 0px;
     margin: 0px;
+    font-family: Roboto, Arial, sans-serif;
 }
 /* styling navigation bar */
 
@@ -11,7 +12,7 @@
     justify-content: space-around;
     align-items: center;
     padding: 0px 16px; 
-    font-family: Roboto, Arial, sans-serif;
+    
 }
 
 #guideContainer {
@@ -142,7 +143,7 @@
     font-size: 1rem;
     font-weight: 500;
     line-height: 1.6rem;
-    font-family: Roboto, Arial, sans-serif;
+    
 }
 
 #channelNameContainer p {
@@ -151,7 +152,7 @@
     font-weight: 400;
     line-height: 1.8rem;
     text-transform: none;
-    font-family: Roboto, Arial, sans-serif;
+    
 }
 
 #videoDescription {
@@ -178,7 +179,7 @@
     height: 56px;
     cursor: pointer;
     border-color: red;
-    font-family: Roboto, Arial, sans-serif;
+    
 }
 
 #category {
@@ -195,6 +196,29 @@
     text-decoration: none;
 }
 
+/* COMMENT SECTION*/
+
+#commentsSort {
+    display: flex;
+    flex-direction: row;
+}
+
+
+#sortButton {
+    display: flex;
+    flex-direction: row;
+    margin-left: 30px;
+    align-items: center;
+}
+
+#sortIcon {
+    height: 24px;
+    width: 24px;
+}
+
+#sortButton p {
+    color: lightgrey;
+}
 
 /* Sidebar */
 #sidebar {
